# Sweet-Shop

./: README.md  sweet-shop.code-workspace
backend/: CMakeLists.txt
backend/include/: Auth.h  Database.h  JWT.h  Sweet.h
backend/src/: Auth.cpp  Database.cpp  JWT.cpp  Sweet.cpp  main.cpp
backend/src/tests/: test_database.cpp  test_main.cpp
database/: schema.sql  seed_data.sql
frontend/public/: index.html
frontend/src/: api.js  script.js  style.css
scripts/: build.sh  run.sh  setup_database.sh
